--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,7 +12,40 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>HTML is the structure of a webpage.</li>
+          <li>Child elements are elements nested inside a body element.</li>
+          <li>h1-h6 are elements representing headings and decrease in size as number goes up.</li>
+          <li>p elements represent paragraphs and block texts.</li>
+          <li>ul, ol, and li represent unordered lists, ordered lists, and list items.</li>
+          <li>img represents elements containing images. The src attribute being the location of the image.</li>
+          <li>br creates lines of empty space.</li>
+          <li>a element is an anchor which creates hyperlinks. href is the attribute for the url.</li>
+        </ul>
+      </section>
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter CSS notes here</li>
+        </ul>
+      </section>
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and swithces to it</li>
+        </ul>
+      </section>
+      <section class="card" id="javascript-section">
+        <h2>Javascript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
