--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -30,7 +31,13 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>The three ways to style a webpage using CSS is: inline CSS, internal CSS style sheet, and external CSS style sheet.</li>
+          <li>Inline CSS is directly in the HTML and is used for particular page elements only and are less flexible.</li>
+          <li>Internal stylesheets contains rules in the head section of the CSS file</li>
+          <li>External CSS style sheets are done in a seperate file to make changes easier and has to be lined to the HTML.</li>
+          <li>CSS rule is selector{Propery:Value}</li>
         </ul>
       </section>
       <section class="card" id="git-section">
